--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.3",
+        "php": "^8.2",
         "intervention/image": "^3.4",
         "laravel/framework": "^v12.2",
         "laravel/octane": "^2.3",
@@ -14,6 +14,7 @@
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.24",
+        "predis/predis": "^2.3",
         "reefki/laravel-device-detector": "^1.0",
         "spatie/laravel-permission": "^6.4",
         "symfony/filesystem": "^7.2"
